# chess-

./: CMakeLists.txt
include/: Io.hpp  armored_queen.hpp  bishop.hpp  board.hpp  game.hpp  joker_pawn.hpp  king.hpp  knight.hpp  mode.hpp  pawn.hpp  piece.hpp  player.hpp  queen.hpp  rook.hpp  spy.hpp  super_pawn.hpp
src/: Io.cpp  armored_queen.cpp  bishop.cpp  board.cpp  game.cpp  joker_pawn.cpp  king.cpp  knight.cpp  main.cpp  mode.cpp  pawn.cpp  piece.cpp  player.cpp  queen.cpp  rook.cpp  spy.cpp  super_pawn.cpp
